# phoenix

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs
conf/: default.json
etc/: config.json
src/: connector.rs  data.rs  handler.rs  main.rs
src/connector/: firmware.rs  mqtt.rs
src/connector/firmware/: unix_sockets.rs  zmq.rs
src/connector/mqtt/: paho.rs  paho_client.rs
